--- a/package.json
+++ b/package.json
@@ -2,11 +2,38 @@
   "name": "tasktive.io",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
+  },
+  "repository": {
+    "url": "https://github.com/ialirezaesrafili/tasktive.io.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "ialirezaesrafili",
+  "license": "ISC",
+  "dependencies": {
+    "auto-bind": "^5.0.1",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "cloudinary": "^2.5.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-validation": "^4.1.1",
+    "express-validator": "^7.2.1",
+    "http-status-codes": "^2.3.0",
+    "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.9",
+    "slugify": "^1.6.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "validator": "^13.12.0"
+  }
 }
