--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon server.js"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    }
   },
   "repository": {
     "url": "https://github.com/ialirezaesrafili/tasktive.io.git"
@@ -32,8 +37,15 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "slugify": "^1.6.6",
+    "supertest": "^7.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.26.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.26.3",
+    "@babel/preset-env": "^7.26.8",
+    "babel-jest": "^29.7.0"
   }
 }
